src/objects/Language_Translation__c.object
<CustomObject>
    <description>Junction object to store the Different Translations of Project object.</description>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnian (Latin)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese Simplified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese Traditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Croatian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Czech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Danish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estonian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haitian Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hmong Daw</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hungarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indonesian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Klingon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Klingon (pIqaD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latvian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lithuanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maltese</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project1__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Language Translations (Project)</relationshipLabel>
        <relationshipName>Language_Translations1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Language Translations</relationshipLabel>
        <relationshipName>Language_Translations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Language Translation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LR-{0000}</displayFormat>
        <label>Language Translation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Language Translations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>